fix: CORS allowedOriginPatterns (vraie correction)